# bayan

./: CMakeLists.txt  README.md  file_utility.cpp  file_utility.h  helper.cpp  helper.h  main.cpp
lib/: crc32.cpp  crc32.h  md5.cpp  md5.h  sha256.cpp  sha256.h
